--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.69.5",
-    "tailwindcss": "^3.4.3"
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^3.4.3",
+    "tailwindcss-animated": "^2.0.0"
   },
   "devDependencies": {
     "@epic-web/config": "^1.16.3",
