--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@faustwp/core": "^3.1.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-slot": "^1.2.2",
     "@reduxjs/toolkit": "^2.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
@@ -41,11 +42,14 @@
     "@tiptap/starter-kit": "^2.3.1",
     "@wordpress/style-engine": "^1.41.0",
     "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.12.0",
     "graphql": "^16.9.0",
     "html-entities": "^2.5.2",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.511.0",
+    "motion": "^12.12.1",
     "next": "^14.2.18",
     "next-secure-headers": "^2.2.0",
     "next-seo": "^6.6.0",
@@ -66,6 +70,7 @@
     "sass": "^1.69.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^2.0.0"
   },
   "devDependencies": {
